--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -25,5 +25,12 @@ jobs:
           git config user.name "lagzian"
           git config user.email "milad.lagzian@gmail.com"
           git add Readme2.md
-          git diff --cached --exit-code || git commit -m "Replace 'yebekhe' with 'lagzian'"
-          git push origin HEAD:main
+
+          # Check if there are any changes to commit
+          if git diff-index --quiet HEAD; then
+            echo "No changes to commit."
+          else
+            git commit -m "Replace 'yebekhe' with 'lagzian'"
+            git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
+            git push origin HEAD:main
+          fi
