--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Copy sync.yml to lagzian/TelegramV2rayCollector
+        run: |
+          cp sync.yml repo/.github/workflows/sync.yml || true
+        continue-on-error: true
+
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
