--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -30,14 +30,11 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
-      - name: Create .github/workflows directory
-        run: mkdir -p repo/.github/workflows
-
       - name: Download sync.yml from artifacts
         uses: actions/download-artifact@v2
         with:
           name: sync-yml
-          path: repo/.github/workflows/sync.yml
+          path: repo/.github/workflows/
 
       - name: Replace text in Readme2.md
         run: |
@@ -56,4 +53,5 @@ jobs:
           fi
 
       - name: Copy sync.yml to .github/workflows directory
-        run: cp sync.yml repo/.github/workflows/sync.yml
+        run: |
+          cp sync.yml repo/.github/workflows/
