--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -58,6 +58,12 @@ jobs:
         run: |
           cat repo/.github/workflows/sync.yml
 
+      - name: Configure Git
+        run: |
+          cd repo
+          git config user.name "lagzian"
+          git config user.email "milad.lagzian@gmail.com"
+
       - name: Replace text in Readme2.md
         run: |
           sed -i 's/yebekhe/lagzian/g' repo/.github/workflows/sync.yml
@@ -68,16 +74,13 @@ jobs:
 
       - name: Commit and Push changes
         run: |
-          cd repo
-          git config user.name "lagzian"
-          git config user.email "milad.lagzian@gmail.com"
-          
-          git add .github/workflows/sync.yml
+          cd repo/.github/workflows
+          git add sync.yml
 
           # Check if there are any changes to commit
           if git diff-index --quiet HEAD; then
-            git commit -m "Replace 'yebekhe' with 'lagzian'" --allow-empty
-            git push origin HEAD:main
-          else
             echo "No changes to commit."
+          else
+            git commit -m "Replace 'yebekhe' with 'lagzian'"
+            git push origin HEAD:main
           fi
