--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: List contents of checked directory
+        run: ls -la $GITHUB_WORKSPACE
+
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
