--- a/.github/workflows/edit_V2ray.yml
+++ b/.github/workflows/edit_V2ray.yml
@@ -31,6 +31,7 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "Replace 'yebekhe' with 'lagzian'"
+            git remote set-url origin https://x-access-token:${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
             git push origin HEAD:main
           fi
 
@@ -40,7 +41,7 @@ jobs:
 
       - name: Replace sync.yml
         run: |
-          if ! cmp -s sync.yml repo/.github/workflows/sync.yml; then
+          if ! cmp -s sync.yml repo/sync.yml; then
             cp -f sync.yml repo/.github/workflows/sync.yml
             cd repo
             git add .github/workflows/sync.yml
