--- a/.github/workflows/copyfile.yml
+++ b/.github/workflows/copyfile.yml
@@ -1,42 +1,44 @@
-name: Copy File
-
+name: Sync Sync.yml Every Hour
 on:
   schedule:
-    - cron: '0 * * * *' # Runs every hour
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
+    - cron: '0 * * * *' # Run every hour at the start of the hour
 
 jobs:
-
-  copy:
+  sync:
+    name: Sync Sync.yml
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source repository
-      uses: actions/checkout@v2
-      with:
-        repository: lagzian/source-repo
-        token: ${{ secrets.ACCESS_TOKEN }}
+      - name: Checkout Source Repo
+        uses: actions/checkout@v2
+        with:
+          ref: main # Change 'main' to the appropriate branch if needed
 
-    - name: Checkout destination repository
-      uses: actions/checkout@v2
-      with:
-        repository: lagzian/TelegramV2rayCollector
-        token: ${{ secrets.ACCESS_TOKEN }}
-        path: destination-repo
+      - name: Download sync.yml from Google Drive
+        run: |
+          curl -LJO "https://drive.google.com/uc?id=11fC84PfmgSXfxUg3-6noSDfOQocovs-Y&export=download"
+          mv uc?id=11fC84PfmgSXfxUg3-6noSDfOQocovs-Y\&export=download sync.yml
 
-    - name: Copy file
-      run: cp ./source-repo/sync.yml ./destination-repo/.github/workflows/
+      - name: Configure Git
+        run: |
+          git config --global user.name "Your Name"
+          git config --global user.email "your-email@example.com"
 
-    - name: Commit and push changes
-      run: |
-        cd ./destination-repo
-        git config user.name "Automated"
-        git config user.email "actions@github.com"
-        git add .
-        git commit -m "Copy sync.yml file"
-        git push
+      - name: Clone Target Repo
+        run: |
+          git clone https://github.com/lagzian/TelegramV2rayCollector.git target-repo
+
+      - name: Replace sync.yml in Target Repo
+        run: |
+          cp sync.yml target-repo/.github/workflows/sync.yml
+
+      - name: Commit and Push Changes
+        run: |
+          cd target-repo
+          git add .github/workflows/sync.yml
+          git commit -m "Update sync.yml"
+          git push
+
+      - name: Cleanup
+        run: |
+          rm sync.yml
